Changes for 3.4.3rc1

New features:

Bug fixes:
.......PS. [ZBX-12691] moved item state,lastlogsize,mtime,lastclock configuration cache update from value reception to value processing (wiper)
........S. [DEV-658] reduced memory used by pre-processor manager item cache (wiper)
..F....... [ZBX-12619] fixed error displaying of zabbix server status widget (gcalenko)
A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
..F....... [ZBX-12709] fixed possibility to enter deleys with suffixes for new elements of slideshows (Sasha)
A......... [ZBX-12482] fixed behavior for graph prototypes when item prototype is deleted (Sasha)
A......... [ZBX-12727] fixed response for script.get() method with "editable" flag (Sasha)
A......... [ZBX-12727] fixed dcheck.get(), dhost.get() and dservice.get() permission checks for admin users; related to ZBX-7238 (Sasha)

--------------------------------------------------------------------------------
Changes for 3.4.2

3.4.2rc2 was released as 3.4.2 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.2rc2

Bug fixes:
..F....... [ZBX-12769] fixed XSS vulnerabilities in argument passing for popup forms and file import forms (gcalenko)
A.F....... [ZBX-12768] added schema validation for URL fields based on schemas whitelist in ZBX_URI_VALID_SCHEMES (gcalenko, Sasha)
..F....... [ZBX-12572] fixed losing "now" on timeline (vmurzins)
.......PS. [ZBX-12739] fixed data conversion for ssh checks of numeric value type (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.2rc1

New features:
A.F....... [ZBXNEXT-4091] improved permission schema of the dashboards for normal administrators (Sasha)
.........T [ZBXNEXT-4099] removed starting point from all OIDs; shortened old IOS Cisco templates names (vso, vzhuravlev)