@@ -3,6 +3,7 @@ Changes for 3.4.3rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-11426] fixed the housekeeper for not deleting events in open problem state (abs)
 .......PS. [ZBX-12691] moved item state,lastlogsize,mtime,lastclock configuration cache update from value reception to value processing (wiper)
 ........S. [DEV-658] reduced memory used by pre-processor manager item cache (wiper)
 ..F....... [ZBX-12619] fixed error displaying of zabbix server status widget (gcalenko)
@@ -307,6 +308,8 @@ New features:
 ...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)
 
 Bug fixes:
+........S. [ZBX-11426] fixed the housekeeper for not deleting events in open problem state (abs)
+A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
 A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
 A......... [ZBX-12727] fixed response for script.get() method with "editable" flag (Sasha)
 A......... [ZBX-12727] fixed dcheck.get(), dhost.get() and dservice.get() permission checks for admin users; related to ZBX-7238 (Sasha)
